--- a/apps/mqtt-client/src/app/playground/playground.component.html
+++ b/apps/mqtt-client/src/app/playground/playground.component.html
@@ -1,4 +1,5 @@
 <smart-home-conx-tankerkoenig-prices></smart-home-conx-tankerkoenig-prices>
+<smart-home-conx-openweathermap-weather></smart-home-conx-openweathermap-weather>
 
 <ul>
   <li>devices/3357047/temperature, {{'{'}}"value":18.9, "pin":2}<button mat-button color="primary" (click)="applyAndSend(3357047, 'temperature', 18.9, 2)"><mat-icon>check</mat-icon></button></li>
