--- a/apps/mqtt-client/src/app/app.component.html
+++ b/apps/mqtt-client/src/app/app.component.html
@@ -1,3 +1,12 @@
+<mat-toolbar color="primary">
+  <button mat-icon-button>
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>SmartHomeConX</span>
+  <span class="spacer"></span>
+  <smart-home-conx-notification-menu></smart-home-conx-notification-menu>
+</mat-toolbar>
+
 <nav *ngIf="isLoggedIn$ | async">
   <div>
     <a routerLink="/playground">Playground</a>
