--- a/apps/mqtt-client/src/app/core/notification/notification-item/notification-item.component.html
+++ b/apps/mqtt-client/src/app/core/notification/notification-item/notification-item.component.html
@@ -14,7 +14,7 @@
     <p>{{notification.message}}</p>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-icon-button color="accent" (click)="done(notification._id)">
+    <button mat-icon-button color="accent" (click)="done(notification._id.toString())">
       <mat-icon>done</mat-icon>
     </button>
   </mat-card-actions>
