added name property to Sensor; Expanded detail forms for specific sensor types; handle switch messages and save to influx; minor fixes and improvements

--- a/apps/mqtt-client/src/app/facility/sensor/sensor-create/movement-detail-create/movement-detail-create.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-create/movement-detail-create/movement-detail-create.component.html
@@ -4,4 +4,5 @@
     <input matInput type="number" placeholder="Sperrzeit" [formControlName]="formControlNames.lockTime">
     <div matSuffix>Sek.</div>
   </mat-form-field>
+  <mat-checkbox [formControlName]="formControlNames.warningEnabled">Warnen bei Bewegung</mat-checkbox>
 </form>
