use fabricjs to implement room and sensor view

--- a/apps/mqtt-client/src/app/facility/sensor/sensor-list/sensor-list.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-list/sensor-list.component.html
@@ -11,6 +11,8 @@
   Erstellen
 </button>
 
+<smart-home-conx-canvas></smart-home-conx-canvas>
+
 <div style="margin-top: 20px;">
   <mat-slide-toggle (change)="onEditModeChange($event)">Bearbeitungsmodus aktiv</mat-slide-toggle>
   <smart-home-conx-floor [enabled]="editModeEnabled"></smart-home-conx-floor>
