fixed bug regarding logout; improved modal dialogs; use separate components for each type of sensor

--- a/apps/mqtt-client/src/app/facility/device/alexa-details/alexa-details.component.html
+++ b/apps/mqtt-client/src/app/facility/device/alexa-details/alexa-details.component.html
@@ -1,4 +1,9 @@
-<h1 mat-dialog-title>{{data.accountName}}</h1>
+<div mat-dialog-title>
+  <h1>{{data.accountName}}</h1>
+  <button mat-icon-button mat-dialog-close>
+    <mat-icon>close</mat-icon>
+  </button>
+</div>
 <div mat-dialog-content>
   <form [formGroup]="form" class="form-container">
     <div>
