--- a/apps/mqtt-client/src/styles.scss
+++ b/apps/mqtt-client/src/styles.scss
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// close button in dialogs
+.mat-dialog-title {
+  display: flex !important;
+  justify-content: space-between;
+}
