harmonized detail dialogs of sensors

--- a/apps/mqtt-client/src/app/facility/sensor/sensor-action-buttons/sensor-action-buttons.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-action-buttons/sensor-action-buttons.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button mat-button (click)="sendMqttMessage()"><mat-icon>send</mat-icon> Fake MQTT</button>
-
+  <button mat-menu-item (click)="edit()"><mat-icon>edit</mat-icon> Bearbeiten</button>
+  <button mat-menu-item (click)="sendMqttMessage()"><mat-icon>send</mat-icon> Fake MQTT</button>
   <ng-content></ng-content>
 </div>
