--- a/apps/mqtt-client/src/app/facility/sensor/sensor-detail/humidity-detail/humidity-detail.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-detail/humidity-detail/humidity-detail.component.html
@@ -1,30 +1,35 @@
 <div mat-dialog-title>
-  <h1 *ngIf="data.sensor">Luftfeuchtigkeitssensor {{data.sensor.name || ''}}</h1>
+  <h1>Verlauf</h1>
   <button mat-icon-button mat-dialog-close>
     <mat-icon>close</mat-icon>
   </button>
 </div>
 <div mat-dialog-content>
 
-  <button mat-icon-button (click)="edit()"><mat-icon>edit</mat-icon></button>
+  <div *ngIf="data.sensor">Luftfeuchtigkeitssensor {{data.sensor.name || ''}}</div>
 
-  <div><small>Pin: {{data.sensor.pin || 'keiner'}}</small></div>
-  <div><small *ngIf="data.sensor.details">Warnungen: {{data.sensor.details.warningEnabled}}</small></div>
-  <div><small *ngIf="data.sensor.details">Abweichung: {{data.sensor.details.aberrance}}%</small></div>
+  <!-- <div><small>Pin: {{data.sensor.pin || 'keiner'}}</small></div> -->
+  <!-- <div><small *ngIf="data.sensor.details">Warnungen: {{data.sensor.details.warningEnabled}}</small></div> -->
 
   <!-- <smart-home-conx-sensor-warning-list></smart-home-conx-sensor-warning-list> -->
 
+  <div><small *ngIf="data.sensor.details">Abweichung: {{data.sensor.details.aberrance}}%</small></div>
   <smart-home-conx-sensor-history
     [sensor]="data.sensor"
     [formatYAxis]="formatYAxis"
   ></smart-home-conx-sensor-history>
-
-  <smart-home-conx-sensor-action-buttons
-    [sensor]="data.sensor"
-  >
-    <!-- TODO: remove this buttons! -->
-    <button mat-button (click)="heaterOn()"><mat-icon>send</mat-icon> Heater on</button>
-    <button mat-button (click)="heaterOff()"><mat-icon>send</mat-icon> Heater off</button>
-    <button mat-button (click)="readnow()"><mat-icon>send</mat-icon> readnow</button>
-  </smart-home-conx-sensor-action-buttons>
 </div>
+<mat-dialog-actions align="end">
+  <button mat-button [matMenuTriggerFor]="menu">
+    <mat-icon>more_vert</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu" yPosition="above">
+    <smart-home-conx-sensor-action-buttons [sensor]="data.sensor" [dialogRef]="dialogRef">
+      <!-- TODO: remove this buttons! -->
+      <button mat-menu-item (click)="heaterOn()"><mat-icon>send</mat-icon> Heater on</button>
+      <button mat-menu-item (click)="heaterOff()"><mat-icon>send</mat-icon> Heater off</button>
+      <button mat-menu-item (click)="readnow()"><mat-icon>send</mat-icon> readnow</button>
+    </smart-home-conx-sensor-action-buttons>
+  </mat-menu>
+  <button mat-button [mat-dialog-close]="true">OK</button>
+</mat-dialog-actions>
