--- a/apps/mqtt-client/src/app/facility/sensor/sensor-detail/voltage-detail/voltage-detail.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-detail/voltage-detail/voltage-detail.component.html
@@ -1,15 +1,15 @@
 <div mat-dialog-title>
-  <h1 *ngIf="data.sensor">Batterie {{data.sensor.name || ''}}</h1>
+  <h1>Verlauf</h1>
   <button mat-icon-button mat-dialog-close>
     <mat-icon>close</mat-icon>
   </button>
 </div>
 <div mat-dialog-content>
 
-  <button mat-icon-button (click)="edit()"><mat-icon>edit</mat-icon></button>
+  <div *ngIf="data.sensor">Batterie {{data.sensor.name || ''}}</div>
 
-  <div><small>Pin: {{data.sensor.pin || 'keiner'}}</small></div>
-  <div><small *ngIf="data.sensor.details">Warnungen: {{data.sensor.details.warningEnabled}}</small></div>
+  <!-- <div><small>Pin: {{data.sensor.pin || 'keiner'}}</small></div> -->
+  <!-- <div><small *ngIf="data.sensor.details">Warnungen: {{data.sensor.details.warningEnabled}}</small></div> -->
 
   <!-- <smart-home-conx-sensor-warning-list></smart-home-conx-sensor-warning-list> -->
 
@@ -17,6 +17,16 @@
     [sensor]="data.sensor"
     [formatYAxis]="formatYAxis"
   ></smart-home-conx-sensor-history>
-
-  <smart-home-conx-sensor-action-buttons [sensor]="data.sensor"></smart-home-conx-sensor-action-buttons>
 </div>
+<mat-dialog-actions align="end">
+  <button mat-button [matMenuTriggerFor]="menu">
+    <mat-icon>more_vert</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu" yPosition="above">
+    <smart-home-conx-sensor-action-buttons
+      [sensor]="data.sensor"
+      [dialogRef]="dialogRef"
+    ></smart-home-conx-sensor-action-buttons>
+  </mat-menu>
+  <button mat-button [mat-dialog-close]="true">OK</button>
+</mat-dialog-actions>
