state for sensor charts; improved tooltips in charts

--- a/apps/mqtt-client/src/app/facility/sensor/sensor-detail/switch-detail/switch-detail.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-detail/switch-detail/switch-detail.component.html
@@ -15,6 +15,7 @@
 
   <smart-home-conx-sensor-history
     [sensor]="data.sensor"
+    [formatYAxis]="formatYAxis"
     [curve]="curve"
     [yAxisTicks]="[0, 1]"
     min="0"
