--- a/apps/mqtt-client/src/app/facility/sensor/sensor-detail/movement-detail/movement-detail.component.html
+++ b/apps/mqtt-client/src/app/facility/sensor/sensor-detail/movement-detail/movement-detail.component.html
@@ -25,6 +25,7 @@
 
   <!-- <smart-home-conx-sensor-history
     [sensor]="data.sensor"
+    [formatYAxis]="formatYAxis"
     [curve]="curve"
     [yAxisTicks]="[0, 1]"
     min="0"
