--- a/apps/mqtt-client/src/app/external-systems/weather/weather.component.html
+++ b/apps/mqtt-client/src/app/external-systems/weather/weather.component.html
@@ -20,33 +20,9 @@
   <mat-tab-group>
     <mat-tab>
       <ng-template mat-tab-label>1h</ng-template>
-      <div class="horizontal-wrapper" *ngIf="(precipitationWithinNextHour$ | async) === true; else noPrecipitation">
-        <ngx-charts-area-chart
-          *ngIf="precipitationChartData$ | async as precipitationChartData"
-          [view]="[1000, 150]"
-          [scheme]="colorScheme"
-          [curve]="curve"
-          [results]="precipitationChartData"
-          [xAxis]="true"
-          [yAxis]="true"
-          [yScaleMin]="0"
-          [xAxisTickFormatting]="formatXAxis"
-          [yAxisTickFormatting]="formatYAxis"
-        >
-          <ng-template #tooltipTemplate let-model="model">
-            <div>{{model.name | date:'HH:mm'}} Uhr</div>
-            <div>{{model.value | number:'1.1-2'}}mm</div>
-          </ng-template>
-
-          <ng-template #seriesTooltipTemplate let-model="model">
-            <ng-container *ngIf="model[0] as item">
-              <div>{{item.name | date:'HH:mm'}} Uhr</div>
-              <div>{{item.value | number:'1.1-2'}}mm</div>
-            </ng-container>
-          </ng-template>
-        </ngx-charts-area-chart>
+      <div class="horizontal-wrapper">
+        <smart-home-conx-weather-forecast-minutely></smart-home-conx-weather-forecast-minutely>
       </div>
-      <ng-template #noPrecipitation>Kein Niederschlag zu erwarten.</ng-template>
     </mat-tab>
     <mat-tab>
       <ng-template mat-tab-label>48h</ng-template>
